--- a/DScaler/DScalerRes/DScalerRes.rc
+++ b/DScaler/DScalerRes/DScalerRes.rc
@@ -841,18 +841,18 @@ BEGIN
         MENUITEM "&Full Screen\tAlt+Enter",     IDM_FULL_SCREEN
         MENUITEM "Always On &Top (Window)",     IDM_ON_TOP
         MENUITEM "Always On To&p (Full Screen)", IDM_ALWAYONTOPFULLSCREEN
-        MENUITEM "&Auto-Size Window",           IDM_WINPOS_AUTOSIZE
+        MENUITEM "A&uto-Size Window",           IDM_WINPOS_AUTOSIZE
         MENUITEM SEPARATOR
+        MENUITEM "&Autodetect Image Aspect Ratio\tA", 
+                                                IDM_SASPECT_AUTO_TOGGLE
         MENUITEM "&4:3 Fullscreen",             IDM_ASPECT_FULLSCREEN
         MENUITEM "&Letterboxed",                IDM_ASPECT_LETTERBOX
         MENUITEM "&16:9 Anamorphic",            IDM_ASPECT_ANAMORPHIC
+        MENUITEM "S&quare Pixels\tCtrl+Shift+0", IDM_SASPECT_SQUARE
         POPUP "Advanced &Image Aspect Ratios"
         BEGIN
-            MENUITEM "&Autodetect (experimental)\tA", 
-                                                    IDM_SASPECT_AUTO_TOGGLE
             MENUITEM "&Detect from Current Image\t`", IDM_SASPECT_COMPUTE
             MENUITEM "&Stretch to &Window\tCtrl+0", IDM_SASPECT_0
-            MENUITEM "&Square Pixels\tCtrl+Shift+0", IDM_SASPECT_SQUARE
             MENUITEM "1.33\tCtrl+1",                IDM_SASPECT_133
             MENUITEM "1.44   Letterboxed\tCtrl+7",  IDM_SASPECT_144
             MENUITEM "1.55   Letterboxed\tCtrl+8",  IDM_SASPECT_155
