--- a/DScaler/DScalerRes/DScalerRes.rc
+++ b/DScaler/DScalerRes/DScalerRes.rc
@@ -769,13 +769,13 @@ BEGIN
                     10
 END
 
-IDD_HWSETUP DIALOG DISCARDABLE  0, 0, 300, 181
+IDD_HWSETUP DIALOG DISCARDABLE  0, 0, 300, 230
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "General Hardware Setup"
 FONT 8, "MS Sans Serif"
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,7,160,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,65,160,50,14
+    DEFPUSHBUTTON   "OK",IDOK,7,209,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,65,209,50,14
     COMBOBOX        IDC_PROCESSOR_SPEED,72,35,178,190,CBS_DROPDOWNLIST | 
                     WS_VSCROLL | WS_TABSTOP
     COMBOBOX        IDC_TRADEOFF,73,81,178,190,CBS_DROPDOWNLIST | WS_VSCROLL | 
@@ -790,7 +790,12 @@ BEGIN
                     WS_TABSTOP
     LTEXT           "DScaler can use your full CPU for best results or keep CPU for other applications running at the same time. Choose the option below that best matches your preferences.",
                     -1,7,106,286,17
-    LTEXT           "Defaults",-1,15,130,41,10
+    LTEXT           "CPU using",-1,15,130,41,10
+    COMBOBOX        IDC_VIDEOCARD,73,181,178,190,CBS_DROPDOWNLIST | 
+                    WS_VSCROLL | WS_TABSTOP
+    LTEXT           "DScaler can adapt its settings regarding the video card you are using.  Choose your video card below or select ""Other cards"" if your video card is not listed. (This setting is not detected)",
+                    -1,7,157,286,17
+    LTEXT           "Video card",-1,15,181,41,10
 END
 
 
@@ -1378,7 +1383,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 293
         TOPMARGIN, 7
-        BOTTOMMARGIN, 174
+        BOTTOMMARGIN, 223
     END
 END
 #endif    // APSTUDIO_INVOKED
@@ -1460,6 +1465,12 @@ BEGIN
 0x6853, 0x776f, 0x6520, 0x6576, 0x7972, 0x6620, 0x6172, 0x656d, 0x2d20, 
 0x6c20, 0x776f, 0x6a20, 0x6475, 0x6564, 0x0072, 
     IDC_FULLCPU, 0x403, 21, 0
+0x6542, 0x7473, 0x7020, 0x6369, 0x7574, 0x6572, 0x7120, 0x6175, 0x696c, 
+0x7974, "\000" 
+    IDC_VIDEOCARD, 0x403, 30, 0
+0x6853, 0x776f, 0x6520, 0x6576, 0x7972, 0x6620, 0x6172, 0x656d, 0x2d20, 
+0x6c20, 0x776f, 0x6a20, 0x6475, 0x6564, 0x0072, 
+    IDC_VIDEOCARD, 0x403, 21, 0
 0x6542, 0x7473, 0x7020, 0x6369, 0x7574, 0x6572, 0x7120, 0x6175, 0x696c, 
 0x7974, "\000" 
     0
