Added input for mixer.

--- a/DScaler/DScalerRes/DScalerRes.rc
+++ b/DScaler/DScalerRes/DScalerRes.rc
@@ -452,7 +452,7 @@ BEGIN
                     ES_READONLY
 END
 
-IDD_MIXERSETUP DIALOG DISCARDABLE  22, 17, 251, 178
+IDD_MIXERSETUP DIALOG DISCARDABLE  22, 17, 251, 196
 STYLE DS_MODALFRAME | WS_CAPTION | WS_SYSMENU
 CAPTION "DScaler Mixer Setup"
 FONT 8, "MS Sans Serif"
@@ -465,26 +465,29 @@ BEGIN
     LTEXT           "Destination",IDC_STATIC,6,43,36,11
     COMBOBOX        IDC_DEST,66,41,178,47,CBS_DROPDOWNLIST | CBS_SORT | 
                     WS_DISABLED | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Tuner Line",IDC_STATIC,6,61,35,11
+    LTEXT           "",IDC_MIXER_INPUT0NAME,6,61,59,19
     COMBOBOX        IDC_INPUT1,66,59,178,49,CBS_DROPDOWNLIST | CBS_SORT | 
                     WS_DISABLED | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Composite",IDC_STATIC,6,79,34,11
+    LTEXT           "",IDC_MIXER_INPUT1NAME,6,79,59,16
     COMBOBOX        IDC_INPUT2,66,77,178,49,CBS_DROPDOWNLIST | CBS_SORT | 
                     WS_DISABLED | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "S-Video",IDC_STATIC,6,97,34,11
+    LTEXT           "",IDC_MIXER_INPUT2NAME,6,97,59,18
     COMBOBOX        IDC_INPUT3,66,95,178,49,CBS_DROPDOWNLIST | CBS_SORT | 
                     WS_DISABLED | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Other 1",IDC_STATIC,6,115,24,11
+    LTEXT           "",IDC_MIXER_INPUT3NAME,6,115,59,15
     COMBOBOX        IDC_INPUT4,66,113,178,45,CBS_DROPDOWNLIST | CBS_SORT | 
                     WS_DISABLED | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Other 2",IDC_STATIC,6,133,24,11
+    LTEXT           "",IDC_MIXER_INPUT4NAME,6,133,59,17
     COMBOBOX        IDC_INPUT5,66,131,178,51,CBS_DROPDOWNLIST | CBS_SORT | 
                     WS_DISABLED | WS_VSCROLL | WS_TABSTOP
-    DEFPUSHBUTTON   "OK",IDOK,6,157,32,15
-    PUSHBUTTON      "Cancel",IDCANCEL,41,157,32,15
+    DEFPUSHBUTTON   "OK",IDOK,5,175,32,15
+    PUSHBUTTON      "Cancel",IDCANCEL,41,175,32,15
     CONTROL         "Reset Mixer to Initial Settings on Exit",
-                    IDC_RESETONEXIT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,84,
-                    158,156,10
+                    IDC_RESETONEXIT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,83,
+                    176,156,10
+    LTEXT           "",IDC_MIXER_INPUT5NAME,5,152,59,18
+    COMBOBOX        IDC_INPUT6,65,150,178,51,CBS_DROPDOWNLIST | CBS_SORT | 
+                    WS_DISABLED | WS_VSCROLL | WS_TABSTOP
 END
 
 IDD_ABOUT DIALOG DISCARDABLE  22, 17, 379, 273
@@ -1325,7 +1328,7 @@ BEGIN
         LEFTMARGIN, 6
         RIGHTMARGIN, 244
         TOPMARGIN, 7
-        BOTTOMMARGIN, 172
+        BOTTOMMARGIN, 190
     END
 
     IDD_ABOUT, DIALOG
