Added Auto-Detect buttton to the Setup Card/Tuner dialog.

--- a/DScaler/DScalerRes/DScalerRes.rc
+++ b/DScaler/DScalerRes/DScalerRes.rc
@@ -542,6 +542,7 @@ FONT 8, "MS Sans Serif"
 BEGIN
     DEFPUSHBUTTON   "OK",IDOK,7,108,50,14
     PUSHBUTTON      "Cancel",IDCANCEL,65,108,50,14
+    PUSHBUTTON      "&Auto-Detect",IDC_AUTODETECT,201,108,50,14
     COMBOBOX        IDC_CARDSSELECT,73,57,178,190,CBS_DROPDOWNLIST | 
                     CBS_SORT | WS_VSCROLL | WS_TABSTOP
     COMBOBOX        IDC_TUNERSELECT,73,80,178,190,CBS_DROPDOWNLIST | 
