--- a/DScaler/DScalerRes/DScalerRes.rc
+++ b/DScaler/DScalerRes/DScalerRes.rc
@@ -166,6 +166,7 @@ BEGIN
     VK_F7,          IDM_TELETEXT_KEY3,      VIRTKEY, NOINVERT
     VK_F7,          IDM_SOURCE_INPUT7,      VIRTKEY, CONTROL, ALT, NOINVERT
     VK_F8,          IDM_TELETEXT_KEY4,      VIRTKEY, NOINVERT
+    VK_F8,          IDM_SOURCE_INPUT8,      VIRTKEY, CONTROL, ALT, NOINVERT
     VK_F9,          IDM_TELETEXT_KEY5,      VIRTKEY, NOINVERT
     VK_HOME,        IDM_CHANNEL_LIST,       VIRTKEY, NOINVERT
     VK_HOME,        IDM_PLAYLIST_FIRST,     VIRTKEY, CONTROL, NOINVERT
@@ -1318,6 +1319,45 @@ BEGIN
         MENUITEM SEPARATOR
         MENUITEM "&Reset",                      IDM_RESET
         MENUITEM "Filter properties...",        IDM_DSHOW_FILTERS
+    END
+END
+
+IDC_CT2388X MENU DISCARDABLE 
+BEGIN
+    POPUP "&CT Card"
+    BEGIN
+        POPUP "Video &Input"
+        BEGIN
+            MENUITEM "Input &1\tCtrl+Alt+F1",       IDM_SOURCE_INPUT1
+            MENUITEM "Input &2\tCtrl+Alt+F2",       IDM_SOURCE_INPUT2
+            MENUITEM "Input &3\tCtrl+Alt+F3",       IDM_SOURCE_INPUT3
+            MENUITEM "Input &4\tCtrl+Alt+F4",       IDM_SOURCE_INPUT4
+            MENUITEM "Input &5\tCtrl+Alt+F5",       IDM_SOURCE_INPUT5
+            MENUITEM "Input &6\tCtrl+Alt+F6",       IDM_SOURCE_INPUT6
+            MENUITEM "Input &7\tCtrl+Alt+F7",       IDM_SOURCE_INPUT7
+            MENUITEM "Input &8\tCtrl+Alt+F8",       IDM_SOURCE_INPUT8
+        END
+        POPUP "Video &Format"
+        BEGIN
+            MENUITEM "&PAL-BDGHI",                  IDM_TYPEFORMAT_0
+            MENUITEM "&NTSC",                       IDM_TYPEFORMAT_1
+            MENUITEM "&SECAM",                      IDM_TYPEFORMAT_2
+            MENUITEM "PAL-&M",                      IDM_TYPEFORMAT_3
+            MENUITEM "PA&L-N",                      IDM_TYPEFORMAT_4
+            MENUITEM "NTSC-&Japan ",                IDM_TYPEFORMAT_5
+            MENUITEM "PAL-&60",                     IDM_TYPEFORMAT_6
+            MENUITEM "NTSC-&50",                    IDM_TYPEFORMAT_7
+            MENUITEM "PAL-N&C",                     IDM_TYPEFORMAT_8
+        END
+        MENUITEM SEPARATOR
+        MENUITEM "&Setup Hardware ...",         IDM_SETUPCARD
+        MENUITEM SEPARATOR
+        MENUITEM "Progressive Input",           IDM_PROGRESSIVE
+        POPUP "Advanced"
+        BEGIN
+            MENUITEM "Save Settings By Format",     IDM_SAVE_BY_FORMAT
+            MENUITEM "Save Settings By Input",      IDM_SAVE_BY_INPUT
+        END
     END
 END
 
