--- a/DScaler/DScalerRes/DScalerRes.rc
+++ b/DScaler/DScalerRes/DScalerRes.rc
@@ -845,8 +845,7 @@ BEGIN
     LTEXT           "Field format",IDC_STATIC,215,25,37,8
     LTEXT           "Name:",IDC_STATIC,90,25,22,8
     GROUPBOX        "Advanced settings",IDC_STATIC,210,10,110,65
-    PUSHBUTTON      "Clear",IDC_DSHOW_VIDEOFMTS_CLEAR,5,120,35,20,
-                    WS_DISABLED
+    PUSHBUTTON      "Clear",IDC_DSHOW_VIDEOFMTS_CLEAR,5,120,35,20
     PUSHBUTTON      "Reset to default",IDC_DSHOW_VIDEOFMTS_DEFAULTS,45,120,
                     35,20,BS_MULTILINE | WS_DISABLED
     LTEXT           "Video formats:",IDC_STATIC,5,5,46,8
