--- a/DScaler/DScalerRes/DScalerRes.rc
+++ b/DScaler/DScalerRes/DScalerRes.rc
@@ -573,30 +573,30 @@ BEGIN
     PUSHBUTTON      "Cancel",IDCANCEL,151,105,50,14
 END
 
-IDD_DISASM_CRASH DIALOG DISCARDABLE  0, 0, 350, 233
+IDD_DISASM_CRASH DIALOG DISCARDABLE  0, 0, 399, 234
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "DScaler Program Failure"
 FONT 8, "MS Sans Serif"
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,293,217,50,14
-    LISTBOX         IDC_ASMBOX,7,19,230,100,LBS_OWNERDRAWFIXED | 
+    DEFPUSHBUTTON   "OK",IDOK,342,213,50,14
+    LISTBOX         IDC_ASMBOX,7,19,279,100,LBS_OWNERDRAWFIXED | 
                     LBS_USETABSTOPS | LBS_NOINTEGRALHEIGHT | LBS_NODATA | 
                     LBS_NOSEL | WS_VSCROLL | WS_TABSTOP
     LTEXT           "crash reason: programmer needs good whack on head",
                     IDC_STATIC_BOMBREASON,8,182,219,8
-    LISTBOX         IDC_REGDUMP,242,19,101,158,NOT LBS_NOTIFY | 
+    LISTBOX         IDC_REGDUMP,291,19,101,158,NOT LBS_NOTIFY | 
                     LBS_NOINTEGRALHEIGHT | LBS_NOSEL | WS_VSCROLL | 
                     WS_HSCROLL | WS_TABSTOP
-    LTEXT           "Program disassembly",IDC_STATIC,7,5,66,8
-    LTEXT           "CPU registers",IDC_STATIC,242,5,44,8
-    LTEXT           "DScaler has crashed due to a program error.  Please hit Save or Save+ to dump diagnostic information to a file called 'crashinfo.txt' in the DScaler program directory.  OK exits the dialog.",
+    LTEXT           "Program disassembly",IDC_STATIC,7,7,66,8
+    LTEXT           "CPU registers",IDC_STATIC,293,5,44,8
+    LTEXT           "DScaler has crashed due to a program error.  Please hit Save to dump diagnostic information to a file called 'crashinfo.txt' in the DScaler program directory.  OK exits the dialog.",
                     IDC_STATIC,7,196,274,24
-    PUSHBUTTON      "Save",IDC_SAVE2,293,180,50,14
-    LISTBOX         IDC_CALL_STACK,7,139,230,38,LBS_NOINTEGRALHEIGHT | 
+    PUSHBUTTON      "Save",IDC_SAVE2,342,180,50,14
+    PUSHBUTTON      "Help",IDC_HELP2,342,197,50,14,WS_DISABLED
+    LISTBOX         IDC_CALL_STACK,7,139,279,38,LBS_NOINTEGRALHEIGHT | 
                     WS_VSCROLL | WS_TABSTOP
     LTEXT           "Estimated call stack",IDC_STATIC,7,128,64,8
-    PUSHBUTTON      "Save+",IDC_SAVEPLUS,293,199,50,14
-    LTEXT           "Exiting thiis dislog may be followed by a system crash please save all your work!",
+    LTEXT           "Exiting this dialog may be followed by a system crash please save all your work!",
                     IDC_STATIC,7,222,279,8
 END
 
