Stopped splash window from being on taskbar

--- a/DScaler/DScalerRes/DScalerRes.rc
+++ b/DScaler/DScalerRes/DScalerRes.rc
@@ -288,8 +288,8 @@ END
 IDD_SPLASHBOX DIALOGEX 0, 0, 145, 192
 STYLE DS_NOIDLEMSG | DS_SETFOREGROUND | DS_3DLOOK | DS_CENTER | WS_POPUP | 
     WS_BORDER
-EXSTYLE WS_EX_NOPARENTNOTIFY
-FONT 8, "System", 0, 0, 0x1
+EXSTYLE WS_EX_NOPARENTNOTIFY | WS_EX_TOOLWINDOW
+FONT 8, "System"
 BEGIN
     LISTBOX         IDC_LIST1,38,140,66,48,NOT LBS_NOTIFY | 
                     LBS_NOINTEGRALHEIGHT | NOT WS_BORDER | WS_TABSTOP
