Audio Standard Dialog: give the dropdown lists some space to drop down.

--- a/DScaler/DScalerRes/DScalerRes.rc
+++ b/DScaler/DScalerRes/DScalerRes.rc
@@ -871,12 +871,12 @@ BEGIN
     LISTBOX         IDC_AUDIOSTANDARD_LIST,7,20,161,195,LBS_SORT | 
                     LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Major carrier:",IDC_STATIC,184,23,42,8
-    COMBOBOX        IDC_AUDIOSTANDARD_MAJORCARRIER,232,20,54,16,CBS_DROPDOWN | 
-                    CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_AUDIOSTANDARD_MAJORCARRIER,232,20,54,162,
+                    CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     LTEXT           "MHz",IDC_STATIC,290,23,16,8
     LTEXT           "Minor carrier:",IDC_STATIC,184,42,42,8
-    COMBOBOX        IDC_AUDIOSTANDARD_MINORCARRIER,232,40,54,16,CBS_DROPDOWN | 
-                    CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_AUDIOSTANDARD_MINORCARRIER,232,40,54,155,
+                    CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     LTEXT           "MHz",IDC_STATIC,290,42,16,8
     LTEXT           "",IDC_AUDIOSTANDARD_DESC,184,72,120,120
 END
