Improved audio standard dialog box.

--- a/DScaler/DScalerRes/DScalerRes.rc
+++ b/DScaler/DScalerRes/DScalerRes.rc
@@ -862,13 +862,13 @@ END
 
 IDD_AUDIOSTANDARD_MANUAL DIALOG DISCARDABLE  0, 0, 313, 222
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "Dialog"
+CAPTION "Select Audio Standard"
 FONT 8, "MS Sans Serif"
 BEGIN
     DEFPUSHBUTTON   "OK",IDOK,256,201,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,197,201,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,184,201,50,14
     LTEXT           "Audio standards:",IDC_STATIC,5,5,54,8
-    LISTBOX         IDC_AUDIOSTANDARD_LIST,7,20,161,195,LBS_SORT | 
+    LISTBOX         IDC_AUDIOSTANDARD_LIST,7,20,161,175,LBS_SORT | 
                     LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Major carrier:",IDC_STATIC,184,23,42,8
     COMBOBOX        IDC_AUDIOSTANDARD_MAJORCARRIER,232,20,54,162,
@@ -878,7 +878,22 @@ BEGIN
     COMBOBOX        IDC_AUDIOSTANDARD_MINORCARRIER,232,40,54,155,
                     CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     LTEXT           "MHz",IDC_STATIC,290,42,16,8
-    LTEXT           "",IDC_AUDIOSTANDARD_DESC,184,72,120,120
+    CONTROL         "Force NICAM - AM",IDC_AUDIOSTANDARD_MANUAL_FORCEAM,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,195,167,100,12
+    DEFPUSHBUTTON   "Detect",IDC_AUDIOSTANDARD_MANUAL_DETECTNOW,7,201,50,14
+    GROUPBOX        "Audio channel",IDC_STATIC,184,64,122,84
+    CONTROL         "Mono",IDC_AUDIOSTANDARD_MANUAL_MONO,"Button",
+                    BS_AUTORADIOBUTTON | WS_TABSTOP,196,76,34,10
+    CONTROL         "Stereo",IDC_AUDIOSTANDARD_MANUAL_STEREO,"Button",
+                    BS_AUTORADIOBUTTON | WS_TABSTOP,196,88,37,10
+    CONTROL         "Language 1",IDC_AUDIOSTANDARD_MANUAL_LANG1,"Button",
+                    BS_AUTORADIOBUTTON | WS_TABSTOP,196,100,54,10
+    CONTROL         "Language 2",IDC_AUDIOSTANDARD_MANUAL_LANG2,"Button",
+                    BS_AUTORADIOBUTTON | WS_TABSTOP,196,112,54,10
+    GROUPBOX        "Auto detect",IDC_STATIC,184,154,122,42
+    LTEXT           "for SECAM videoformat",IDC_STATIC,207,178,88,8
+    PUSHBUTTON      "Detect stereo",IDC_AUDIOSTANDARD_MANUAL_DETECTSTEREO,
+                    197,129,56,14
 END
 
 IDD_TOOLBAR_CHANNELS DIALOG DISCARDABLE  0, 0, 117, 13
