--- a/DScaler/DScalerRes/DScalerRes.rc
+++ b/DScaler/DScalerRes/DScalerRes.rc
@@ -708,26 +708,45 @@ END
 IDD_TREESETTINGS_GENERIC DIALOGEX 0, 0, 197, 169
 STYLE DS_CONTROL | WS_CHILD
 EXSTYLE WS_EX_APPWINDOW
-FONT 8, "MS Sans Serif", 0, 0, 0x1
+FONT 8, "MS Sans Serif"
 BEGIN
-    LISTBOX         IDC_TREESETTINGS_GENERIC_LIST,7,1,100,159,LBS_SORT | 
+    LISTBOX         IDC_TREESETTINGS_GENERIC_LIST,5,36,187,73,LBS_SORT | 
                     LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_HSCROLL | 
                     WS_TABSTOP
-    EDITTEXT        IDC_TREESETTINGS_GENERIC_EDIT,114,1,52,14,ES_AUTOHSCROLL | 
-                    ES_NUMBER | NOT WS_VISIBLE
+    EDITTEXT        IDC_TREESETTINGS_GENERIC_EDIT,11,125,63,14,
+                    ES_AUTOHSCROLL | ES_NUMBER | NOT WS_VISIBLE
     CONTROL         "Spin1",IDC_TREESETTINGS_GENERIC_SPIN,"msctls_updown32",
-                    UDS_ALIGNRIGHT | UDS_ARROWKEYS | NOT WS_VISIBLE,167,1,11,
-                    14
+                    UDS_ALIGNRIGHT | UDS_ARROWKEYS | NOT WS_VISIBLE,75,125,
+                    11,14
     CONTROL         "",IDC_TREESETTINGS_GENERIC_CHECK,"Button",
                     BS_AUTOCHECKBOX | BS_NOTIFY | NOT WS_VISIBLE | 
-                    WS_TABSTOP,113,1,80,10
+                    WS_TABSTOP,11,128,174,10
     CONTROL         "Slider1",IDC_TREESETTINGS_GENERIC_SLIDER,
-                    "msctls_trackbar32",TBS_VERT | TBS_TOP | NOT WS_VISIBLE | 
-                    WS_TABSTOP,136,20,33,117
-    PUSHBUTTON      "Default",IDC_TREESETTINGS_GENERIC_DEFAULT,128,147,45,14,
+                    "msctls_trackbar32",TBS_TOP | NOT WS_VISIBLE | 
+                    WS_TABSTOP,7,142,133,21
+    PUSHBUTTON      "Default",IDC_TREESETTINGS_GENERIC_DEFAULT,141,145,45,14,
                     NOT WS_VISIBLE
-    COMBOBOX        IDC_TREESETTINGS_GENERIC_CHOOSEFROMLIST,113,1,84,75,
+    COMBOBOX        IDC_TREESETTINGS_GENERIC_CHOOSEFROMLIST,11,127,123,75,
                     CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    GROUPBOX        "",IDC_TREESETTINGS_GENERIC_TOPBOX,5,0,187,34
+    GROUPBOX        "Value",IDC_STATIC,5,114,188,51
+    CONTROL         "Global",IDC_TREESETTINGS_GENERIC_SAVEPER_GLOBAL,"Button",
+                    BS_AUTOCHECKBOX | WS_TABSTOP,10,10,40,11
+    CONTROL         "Video input",
+                    IDC_TREESETTINGS_GENERIC_SAVEPER_VIDEOINPUT,"Button",
+                    BS_AUTOCHECKBOX | WS_TABSTOP,10,21,48,11
+    CONTROL         "Source",IDC_TREESETTINGS_GENERIC_SAVEPER_SOURCE,"Button",
+                    BS_AUTOCHECKBOX | WS_TABSTOP,65,10,40,11
+    CONTROL         "Channel",IDC_TREESETTINGS_GENERIC_SAVEPER_CHANNEL,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,121,10,40,11
+    CONTROL         "Video format",
+                    IDC_TREESETTINGS_GENERIC_SAVEPER_VIDEOFORMAT,"Button",
+                    BS_AUTOCHECKBOX | WS_TABSTOP,121,21,61,11
+    LTEXT           "Global setting",IDC_TREESETTINGS_GENERIC_SETTINGINFO,10,
+                    11,177,8,NOT WS_VISIBLE
+    CONTROL         "Audio input",
+                    IDC_TREESETTINGS_GENERIC_SAVEPER_AUDIOINPUT,"Button",
+                    BS_AUTOCHECKBOX | WS_TABSTOP,65,21,51,11
 END
 
 IDD_TREESETTINGS_NOPROPERTIES DIALOG DISCARDABLE  0, 0, 186, 141
