--- a/DScaler/DScalerRes/DScalerRes.rc
+++ b/DScaler/DScalerRes/DScalerRes.rc
@@ -887,8 +887,8 @@ BEGIN
     DEFPUSHBUTTON   "OK",IDOK,256,201,50,14
     PUSHBUTTON      "Cancel",IDCANCEL,184,201,50,14
     LTEXT           "Audio standards:",IDC_STATIC,5,5,54,8
-    LISTBOX         IDC_AUDIOSTANDARD_LIST,7,20,161,175,LBS_SORT | 
-                    LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    LISTBOX         IDC_AUDIOSTANDARD_LIST,7,20,161,175,LBS_NOINTEGRALHEIGHT | 
+                    WS_VSCROLL | WS_TABSTOP
     LTEXT           "Major carrier:",IDC_STATIC,184,23,42,8
     COMBOBOX        IDC_AUDIOSTANDARD_MAJORCARRIER,232,20,54,162,
                     CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
