--- a/DScaler/Debug/Skins/default/skin.ini
+++ b/DScaler/Debug/Skins/default/skin.ini
@@ -1,3 +1,96 @@
+#
+# Skin ini file
+#
+# Sections:
+#
+#   [Border]     : The border around the DScaler window
+#   [Toolbar1]   : The main toolbar at the bottom or top of the screen
+#   [LogoBar]    : DScaler logo
+#   [ChannelBar] : The channel bar in the main tool bar
+#   [VolumeBar]  : The volume bar in the main tool bar
+#
+# Each section has to specify the location of the bitmap and the mask bitmap 
+# for transparency.
+# Use the 'Bitmap' and 'Mask' entries for this.
+# 
+# The bitmaps have to be in .bmp format and can have any resolution or depth.
+# For the mask bitmap, use a 2 color (black/white) bitmap where white is 
+# transparent.
+# The mask bitmap has to be the same size as the corresponding bitmap.
+
+# Each section has 'Bitmap' and 'Mask' entries 
+# Most other entries are pieces from the bitmap file specified in entry 
+# 'Bitmap'.
+# The entries that specify pieces of the bitmap have coordinates as values.
+# The coordinates are 'left,top,right,bottom'. 
+# The right and bottom coordinates are Windows GDI style. They are not 
+# included in the bitmap.
+# e.g.
+#   Mute=10,10,30,30
+#
+#   Is a bitmap of width and height 20. So the column at y coordinate 30 
+#   is not included. Same for the row at x=30
+#
+# The [Border] and [Toolbar1] sections use pieces that build up the outline 
+# of a rectangle in 16 pieces.
+# The corners and pieces right next to them have a fixed size.
+# The pieces in the middle of sides of the rectangle are tiled till the 
+# right size is reached (2,6,10 and 14).
+#
+#    0   1    -2-    3   5
+#    
+#   15                   4
+#
+#
+#   |                    |
+#   14                   6
+#   |                    |
+#    
+#
+#   13                   7
+#
+#   12   11   -10-    9  8
+#
+#   Entries are (seen from top to bottom):
+#   0-5:  TopLeftCorner,TopLeft,TopMiddle,TopRight,TopRightCorner
+#   15,4: LeftTop,RightTop
+#   14,6: LeftMiddle,RightMiddle
+#   13,7: LeftBottom,RightBottom
+#   12-8: BottomLeftCorner,BottomLeft,BottomMiddle,BottomRight,BottomRightCorner
+#
+#   Usually, the corners and middle pieces are minimum. The pieces right 
+#   next to the corners can be left out (1,3,4,7,9,11,13,15)
+#
+#
+
+
+# Border
+#
+# Additional entries:
+#
+# ButtonClose       : Close window button
+# ButtonMinimize    : Mimize window button
+# ButtonMaximize    : Full screen
+# ButtonSize        : Resize window
+#
+# Add 'Click' or 'MouseOver' to the entry name for alternative
+#  bitmaps that appear when the user clicks or moves the mouse over the 
+#  control.
+# (e.g. ButtonCloseMouseOver=10,10,30,30,TopRight,Right,Center)
+#
+# The Button entries have additional arguments after the bitmap coordinates
+# Button=left,top,right,bottom,RelativePosition,X,Y
+#
+# RelativePosition : Position of button relative to a piece of the 
+#                    border (e.g.: RightTop or BottomRightCorner)
+#                    Omit for X and Y coordinates relative to the top-left
+#                    of the window.
+# X and Y          : Top-left position of the button
+#                    (Relative to 'RelativePosition')
+#                    These are the number of pixels or 'Left,Center,Right'
+#                    or 'Top,Center,Bottom' for alignment.
+#
+
 [Border]
 Bitmap=skin1.bmp
 Mask=skin1_mask.bmp
@@ -28,6 +121,19 @@ ButtonSizeClick=0,430,16,446,BottomRightCorner,0,0
 #ButtonSideBar=20,430,36,510,,0,Center
 
 
+# Toolbar1
+#
+# Main toolbar
+# Addition entries:
+#
+# Bar=left,top,right,bottom: Bar seperator
+#
+# Margin=left,top,right,bottom,child_leftright,child_topbottom
+#   left-bottom: Margins at the sides of the toolbar for the bars inside 
+#                (like channelbar and volumebar)
+#  child_leftright: Margin between bars inside the main toolbar
+#  child_topbottom: Margin between bars inside the main toolbar
+#
 [Toolbar1]
 Bitmap=skin1.bmp
 Mask=skin1_mask.bmp
@@ -41,12 +147,27 @@ BottomRight=32,620,384,624
 BottomMiddle=16,620,32,624
 BottomLeftCorner=0,620,16,624
 
+Bar=0,551,1,610
+
+MarginsBottom=5,10,5,0,0,5
+MarginsTop=5,5,5,10,0,5
+
+# Logobar
+#
+# Logo=left,right,top,bottom
 [LogoBar]
 Bitmap=skin1.bmp
 Mask=skin1_mask.bmp
-
 Logo=0,530,171,544
 
+# Logobar
+#
+# The channel down, channel up and previous channel buttons:
+#
+#  SpinDown[MouseOver|Click]=left,right,top,bottom
+#  SpinUp[MouseOver|Click]=left,right,top,bottom
+#  Previous[MouseOver|Click]=left,right,top,bottom
+#
 [ChannelBar]
 Bitmap=skin1.bmp
 Mask=skin1_mask.bmp
@@ -60,6 +181,24 @@ SpinUpClick=80,683,96,694
 Previous=0,660,16,676
 PreviousClick=20,660,36,676
 
+# VolumeBar
+#
+# The mute/unmute button:
+#  Mute[MouseOver|Click]=left,right,top,bottom
+#  MuteChecked[MouseOver|Click]=left,right,top,bottom
+#
+# The volume slider:
+#
+#  Volume[MouseOver|Click]=left,right,top,bottom
+#  Selected[MouseOver|Click]=left,right,top,bottom
+#
+# The channel indicator (Channel 0-3: mono, stereo, lang1, lang2)
+#
+# SoundChannel[MouseOver|Click]=left,right,top,bottom           
+# SoundChannel1[MouseOver|Click]=left,right,top,bottom
+# SoundChannel2[MouseOver|Click]=left,right,top,bottom
+# SoundChannel3[MouseOver|Click]=left,right,top,bottom
+#
 
 [VolumeBar]
 Bitmap=skin1.bmp
@@ -75,13 +214,13 @@ MuteCheckedClick=150,680,166,696
 Volume=43,460,140,476
 VolumeSelected=43,430,142,446
 
+#Mono
+SoundChannel=0,700,30,716
+#Stereo
+SoundChannel1=120,700,150,716
 
-[SideBarChannels]
-Bitmap=skin1.bmp
-Mask=skin1_mask.bmp
-TopLeftCorner=200,430,290,450
-TopRightCorner=290,430,300,450
-RightMiddle=290,450,300,510
-BottomRightCorner=290,510,300,530
-BottomLeftCorner=200,510,290,530
-LeftMiddle=200,450,290,510
+#Lang 1
+SoundChannel2=240,700,270,716
+
+#Lang 2
+SoundChannel3=0,720,30,736
