changes to saa7134 menu

--- a/DScaler/DScalerRes/DScalerRes.rc
+++ b/DScaler/DScalerRes/DScalerRes.rc
@@ -1555,12 +1555,13 @@ BEGIN
         END
         POPUP "Miscellaneous Settings"
         BEGIN
-            MENUITEM "HPLL: TV Mode",               IDM_SAA7134CARD_HPLLMODE0
-
-            MENUITEM "HPLL: VCR Mode",              IDM_SAA7134CARD_HPLLMODE1
-
-            MENUITEM "HPLL: Fast Tracking Mode",    IDM_SAA7134CARD_HPLLMODE2
-
+            MENUITEM "HPLL: TV Mode",               IDM_SAA7134_HPLLMODE0
+            MENUITEM "HPLL: VCR Mode",              IDM_SAA7134_HPLLMODE1
+            MENUITEM "HPLL: Fast Tracking Mode",    IDM_SAA7134_HPLLMODE2
+            MENUITEM SEPARATOR
+            MENUITEM "White Peak",                  IDM_SAA7134_WHITEPEAK
+            MENUITEM "Colour Peak",                 IDM_SAA7134_COLORPEAK
+            MENUITEM "Adaptive Comb Filter",        IDM_SAA7134_COMBFILTER
             MENUITEM SEPARATOR
             MENUITEM "Other Test Settings ...",     IDM_AUDIOSETTINGS
             MENUITEM "Edit Register ...",           IDM_ADV_VIDEOSETTINGS
