--- a/DScaler/DScalerRes/DScalerRes.rc
+++ b/DScaler/DScalerRes/DScalerRes.rc
@@ -677,7 +677,7 @@ BEGIN
 END
 
 IDD_TREESETTING DIALOG DISCARDABLE  0, 0, 336, 201
-STYLE DS_MODALFRAME | DS_CONTEXTHELP | WS_POPUP | WS_CAPTION | WS_SYSMENU
+STYLE DS_CONTEXTHELP | WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 CAPTION "Dialog"
 FONT 8, "MS Sans Serif"
 BEGIN
@@ -712,7 +712,7 @@ STYLE DS_CONTROL | WS_CHILD
 EXSTYLE WS_EX_APPWINDOW
 FONT 8, "MS Sans Serif", 0, 0, 0x1
 BEGIN
-    LISTBOX         IDC_TREESETTINGS_GENERIC_LIST,5,36,187,73,LBS_SORT | 
+    LISTBOX         IDC_TREESETTINGS_GENERIC_LIST,0,37,197,73,LBS_SORT | 
                     LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_HSCROLL | 
                     WS_TABSTOP
     EDITTEXT        IDC_TREESETTINGS_GENERIC_EDIT,11,125,63,14,
@@ -726,26 +726,26 @@ BEGIN
     CONTROL         "Slider1",IDC_TREESETTINGS_GENERIC_SLIDER,
                     "msctls_trackbar32",TBS_TOP | NOT WS_VISIBLE | 
                     WS_TABSTOP,7,142,133,21
-    PUSHBUTTON      "Default",IDC_TREESETTINGS_GENERIC_DEFAULT,141,145,45,14,
+    PUSHBUTTON      "Default",IDC_TREESETTINGS_GENERIC_DEFAULT,142,145,45,14,
                     NOT WS_VISIBLE
     COMBOBOX        IDC_TREESETTINGS_GENERIC_CHOOSEFROMLIST,11,127,123,75,
                     CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    GROUPBOX        "",IDC_TREESETTINGS_GENERIC_TOPBOX,5,0,187,34
-    GROUPBOX        "Value",IDC_STATIC,5,114,188,51
+    GROUPBOX        "",IDC_TREESETTINGS_GENERIC_TOPBOX,0,0,197,34
+    GROUPBOX        "Value",IDC_TREESETTINGS_GENERIC_VALUEBOX,0,114,197,55
     CONTROL         "Global",IDC_TREESETTINGS_GENERIC_SAVEPER_GLOBAL,"Button",
                     BS_AUTOCHECKBOX | WS_TABSTOP,10,10,40,11
     CONTROL         "Video input",
                     IDC_TREESETTINGS_GENERIC_SAVEPER_VIDEOINPUT,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,10,21,48,11
+                    BS_AUTOCHECKBOX | WS_TABSTOP,65,10,48,11
     CONTROL         "Source",IDC_TREESETTINGS_GENERIC_SAVEPER_SOURCE,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,65,10,40,11
+                    BS_AUTOCHECKBOX | WS_TABSTOP,10,21,40,11
     CONTROL         "Channel",IDC_TREESETTINGS_GENERIC_SAVEPER_CHANNEL,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,121,10,40,11
     CONTROL         "Video format",
                     IDC_TREESETTINGS_GENERIC_SAVEPER_VIDEOFORMAT,"Button",
                     BS_AUTOCHECKBOX | WS_TABSTOP,121,21,61,11
     LTEXT           "Global setting",IDC_TREESETTINGS_GENERIC_SETTINGINFO,10,
-                    11,177,8,NOT WS_VISIBLE
+                    10,177,8,NOT WS_VISIBLE
     CONTROL         "Audio input",
                     IDC_TREESETTINGS_GENERIC_SAVEPER_AUDIOINPUT,"Button",
                     BS_AUTOCHECKBOX | WS_TABSTOP,65,21,51,11
