--- a/DScaler/DScalerRes/DScalerRes.rc
+++ b/DScaler/DScalerRes/DScalerRes.rc
@@ -635,45 +635,48 @@ BEGIN
     PUSHBUTTON      "Cancel",IDCANCEL,122,154,50,14
 END
 
-IDD_OVERLAYSETTINGS DIALOG DISCARDABLE  0, 0, 358, 162
+IDD_OVERLAYSETTINGS DIALOG DISCARDABLE  0, 0, 372, 185
 STYLE DS_SYSMODAL | DS_SETFOREGROUND | DS_3DLOOK | WS_POPUP | WS_VISIBLE | 
     WS_CAPTION | WS_SYSMENU
 CAPTION "Overlay Settings"
 FONT 8, "MS Sans Serif"
 BEGIN
-    LTEXT           "&Brightness",-1,6,13,33,10
+    LTEXT           "&Brightness",IDC_STATIC,12,39,33,10
     CONTROL         "Slider1",IDC_SLIDER1,"msctls_trackbar32",TBS_TOP | 
-                    WS_TABSTOP,50,5,258,20
-    EDITTEXT        IDC_D1,315,10,35,12,ES_CENTER | ES_AUTOHSCROLL | 
+                    WS_TABSTOP,56,31,258,20
+    EDITTEXT        IDC_D1,322,36,35,12,ES_CENTER | ES_AUTOHSCROLL | 
                     WS_DISABLED | NOT WS_TABSTOP
-    LTEXT           "Con&trast",-1,6,33,33,10
+    LTEXT           "Con&trast",IDC_STATIC,12,60,33,10
     CONTROL         "Slider1",IDC_SLIDER2,"msctls_trackbar32",TBS_TOP | 
-                    WS_TABSTOP,50,25,258,20
-    EDITTEXT        IDC_D2,315,30,35,12,ES_CENTER | ES_AUTOHSCROLL | 
+                    WS_TABSTOP,56,52,258,20
+    EDITTEXT        IDC_D2,322,57,35,12,ES_CENTER | ES_AUTOHSCROLL | 
                     WS_DISABLED | NOT WS_TABSTOP
-    LTEXT           "&Hue",-1,6,52,33,10
+    LTEXT           "&Hue",IDC_STATIC,12,79,33,10
     CONTROL         "Slider1",IDC_SLIDER3,"msctls_trackbar32",TBS_TOP | 
-                    WS_TABSTOP,50,45,258,20
-    EDITTEXT        IDC_D3,315,50,35,12,ES_CENTER | ES_AUTOHSCROLL | 
+                    WS_TABSTOP,56,71,258,20
+    EDITTEXT        IDC_D3,322,76,35,12,ES_CENTER | ES_AUTOHSCROLL | 
                     WS_DISABLED | NOT WS_TABSTOP
-    LTEXT           "&Color",-1,6,73,33,10
+    LTEXT           "&Color",IDC_STATIC,12,100,33,10
     CONTROL         "Slider1",IDC_SLIDER4,"msctls_trackbar32",TBS_TOP | 
-                    WS_TABSTOP,50,65,258,20
-    EDITTEXT        IDC_D4,315,70,35,12,ES_CENTER | ES_AUTOHSCROLL | 
+                    WS_TABSTOP,56,92,258,20
+    EDITTEXT        IDC_D4,322,97,35,12,ES_CENTER | ES_AUTOHSCROLL | 
                     WS_DISABLED | NOT WS_TABSTOP
-    LTEXT           "&Gamma",-1,6,93,33,10
+    LTEXT           "&Gamma",IDC_STATIC,12,119,33,10
     CONTROL         "Slider1",IDC_SLIDER5,"msctls_trackbar32",TBS_TOP | 
-                    WS_TABSTOP,50,85,258,20
-    EDITTEXT        IDC_D5,315,90,35,12,ES_CENTER | ES_AUTOHSCROLL | 
+                    WS_TABSTOP,56,111,258,20
+    EDITTEXT        IDC_D5,322,116,35,12,ES_CENTER | ES_AUTOHSCROLL | 
                     WS_DISABLED | NOT WS_TABSTOP
-    LTEXT           "&Sharpness",-1,6,113,33,10
+    LTEXT           "&Sharpness",IDC_STATIC,12,140,33,10
     CONTROL         "Slider1",IDC_SLIDER6,"msctls_trackbar32",TBS_TOP | 
-                    WS_TABSTOP,50,105,258,20
-    EDITTEXT        IDC_D6,315,110,35,12,ES_CENTER | ES_AUTOHSCROLL | 
+                    WS_TABSTOP,56,132,258,20
+    EDITTEXT        IDC_D6,322,137,35,12,ES_CENTER | ES_AUTOHSCROLL | 
                     WS_DISABLED | NOT WS_TABSTOP
-    DEFPUSHBUTTON   "&OK",IDOK,6,132,45,15
-    PUSHBUTTON      "Cancel",IDCANCEL,57,132,45,15,WS_GROUP
-    PUSHBUTTON      "&Default",IDC_DEFAULT,113,132,45,15
+    DEFPUSHBUTTON   "&OK",IDOK,5,165,45,15
+    PUSHBUTTON      "Cancel",IDCANCEL,57,165,45,15,WS_GROUP
+    PUSHBUTTON      "&Default",IDC_DEFAULT,110,165,45,15
+    CONTROL         "Use Overlay Controls",IDC_OVERLAYSETTINGS_ENABLE,"Button",
+                    BS_AUTOCHECKBOX | WS_TABSTOP,5,4,92,14
+    GROUPBOX        "",IDC_STATIC,5,20,362,139
 END
 
 IDD_TREESETTING DIALOG DISCARDABLE  0, 0, 336, 201
@@ -1683,6 +1686,14 @@ IDC_CURSOR_HAND         CURSOR  DISCARDABLE     "hand_point.cur"
 #ifdef APSTUDIO_INVOKED
 GUIDELINES DESIGNINFO DISCARDABLE 
 BEGIN
+    IDD_OVERLAYSETTINGS, DIALOG
+    BEGIN
+        LEFTMARGIN, 5
+        RIGHTMARGIN, 367
+        TOPMARGIN, 4
+        BOTTOMMARGIN, 180
+    END
+
     IDD_HWSETUP, DIALOG
     BEGIN
         BOTTOMMARGIN, 241
