--- a/DScaler/DScalerRes/DScalerRes.rc
+++ b/DScaler/DScalerRes/DScalerRes.rc
@@ -1448,50 +1448,6 @@ BEGIN
     END
 END
 
-IDC_CT2388X MENU DISCARDABLE 
-BEGIN
-    POPUP "&CT Card"
-    BEGIN
-        POPUP "&Video Input"
-        BEGIN
-            MENUITEM "Input &1\tCtrl+Alt+F1",       IDM_SOURCE_INPUT1
-            MENUITEM "Input &2\tCtrl+Alt+F2",       IDM_SOURCE_INPUT2
-            MENUITEM "Input &3\tCtrl+Alt+F3",       IDM_SOURCE_INPUT3
-            MENUITEM "Input &4\tCtrl+Alt+F4",       IDM_SOURCE_INPUT4
-            MENUITEM "Input &5\tCtrl+Alt+F5",       IDM_SOURCE_INPUT5
-            MENUITEM "Input &6\tCtrl+Alt+F6",       IDM_SOURCE_INPUT6
-            MENUITEM "Input &7\tCtrl+Alt+F7",       IDM_SOURCE_INPUT7
-            MENUITEM "Input &8\tCtrl+Alt+F8",       IDM_SOURCE_INPUT8
-        END
-        POPUP "Video &Format"
-        BEGIN
-            MENUITEM "&PAL-BDGHI",                  IDM_TYPEFORMAT_0
-            MENUITEM "&NTSC",                       IDM_TYPEFORMAT_1
-            MENUITEM "&SECAM",                      IDM_TYPEFORMAT_2
-            MENUITEM "PAL-&M",                      IDM_TYPEFORMAT_3
-            MENUITEM "PA&L-N",                      IDM_TYPEFORMAT_4
-            MENUITEM "NTSC-&Japan ",                IDM_TYPEFORMAT_5
-            MENUITEM "PAL-&60",                     IDM_TYPEFORMAT_6
-            MENUITEM "NTSC-&50",                    IDM_TYPEFORMAT_7
-            MENUITEM "PAL-N&C",                     IDM_TYPEFORMAT_8
-        END
-        MENUITEM SEPARATOR
-        MENUITEM "&Setup Hardware ...",         IDM_SETUPCARD
-        MENUITEM SEPARATOR
-        POPUP "Advanced"
-        BEGIN
-            MENUITEM "Reset Capture Card",          IDM_RESET
-            MENUITEM "Save Settings By Format",     IDM_SAVE_BY_FORMAT
-            MENUITEM "Save Settings By Input",      IDM_SAVE_BY_INPUT
-        END
-        POPUP "Holo 3d Specific"
-        BEGIN
-            MENUITEM "&Progressive Input\t Ctrl+Alt+P", IDM_PROGRESSIVE
-            MENUITEM "FLI &Film Detect\tCtrl+Alt+F", IDM_FLI_FILMDETECT
-        END
-    END
-END
-
 IDC_DSHOW_VIDEOFMTS_CONTEXTMENU MENU DISCARDABLE 
 BEGIN
     POPUP "PopUp"
@@ -1599,6 +1555,86 @@ BEGIN
             MENUITEM "Save Settings By Format",     IDM_SAVE_BY_FORMAT
             MENUITEM "Save Settings By Input",      IDM_SAVE_BY_INPUT
         END
+    END
+END
+
+IDC_CT2388X MENU DISCARDABLE 
+BEGIN
+    POPUP "&CT Card"
+    BEGIN
+        POPUP "&Video Input"
+        BEGIN
+            MENUITEM "Input &1\tCtrl+Alt+F1",       IDM_SOURCE_INPUT1
+            MENUITEM "Input &2\tCtrl+Alt+F2",       IDM_SOURCE_INPUT2
+            MENUITEM "Input &3\tCtrl+Alt+F3",       IDM_SOURCE_INPUT3
+            MENUITEM "Input &4\tCtrl+Alt+F4",       IDM_SOURCE_INPUT4
+            MENUITEM "Input &5\tCtrl+Alt+F5",       IDM_SOURCE_INPUT5
+            MENUITEM "Input &6\tCtrl+Alt+F6",       IDM_SOURCE_INPUT6
+            MENUITEM "Input &7\tCtrl+Alt+F7",       IDM_SOURCE_INPUT7
+            MENUITEM "Input &8\tCtrl+Alt+F8",       IDM_SOURCE_INPUT8
+        END
+        POPUP "Video &Format"
+        BEGIN
+            MENUITEM "&PAL-BDGHI",                  IDM_TYPEFORMAT_0
+            MENUITEM "&NTSC",                       IDM_TYPEFORMAT_1
+            MENUITEM "&SECAM",                      IDM_TYPEFORMAT_2
+            MENUITEM "PAL-&M",                      IDM_TYPEFORMAT_3
+            MENUITEM "PA&L-N",                      IDM_TYPEFORMAT_4
+            MENUITEM "NTSC-&Japan ",                IDM_TYPEFORMAT_5
+            MENUITEM "PAL-&60",                     IDM_TYPEFORMAT_6
+            MENUITEM "NTSC-&50",                    IDM_TYPEFORMAT_7
+            MENUITEM "PAL-N&C",                     IDM_TYPEFORMAT_8
+        END
+        MENUITEM SEPARATOR
+        MENUITEM "&Setup Hardware ...",         IDM_SETUPCARD
+        MENUITEM SEPARATOR
+        POPUP "Advanced"
+        BEGIN
+            MENUITEM "Reset Capture Card",          IDM_RESET
+            MENUITEM "Save Settings By Format",     IDM_SAVE_BY_FORMAT
+            MENUITEM "Save Settings By Input",      IDM_SAVE_BY_INPUT
+        END
+    END
+END
+
+IDC_CT2388X_H3D MENU DISCARDABLE 
+BEGIN
+    POPUP "&H3D Card"
+    BEGIN
+        POPUP "&Video Input"
+        BEGIN
+            MENUITEM "Input &1\tCtrl+Alt+F1",       IDM_SOURCE_INPUT1
+            MENUITEM "Input &2\tCtrl+Alt+F2",       IDM_SOURCE_INPUT2
+            MENUITEM "Input &3\tCtrl+Alt+F3",       IDM_SOURCE_INPUT3
+            MENUITEM "Input &4\tCtrl+Alt+F4",       IDM_SOURCE_INPUT4
+            MENUITEM "Input &5\tCtrl+Alt+F5",       IDM_SOURCE_INPUT5
+            MENUITEM "Input &6\tCtrl+Alt+F6",       IDM_SOURCE_INPUT6
+            MENUITEM "Input &7\tCtrl+Alt+F7",       IDM_SOURCE_INPUT7
+            MENUITEM "Input &8\tCtrl+Alt+F8",       IDM_SOURCE_INPUT8
+        END
+        POPUP "Video &Format"
+        BEGIN
+            MENUITEM "&PAL-BDGHI",                  IDM_TYPEFORMAT_0
+            MENUITEM "&NTSC",                       IDM_TYPEFORMAT_1
+            MENUITEM "&SECAM",                      IDM_TYPEFORMAT_2
+            MENUITEM "PAL-&M",                      IDM_TYPEFORMAT_3
+            MENUITEM "PA&L-N",                      IDM_TYPEFORMAT_4
+            MENUITEM "NTSC-&Japan ",                IDM_TYPEFORMAT_5
+            MENUITEM "PAL-&60",                     IDM_TYPEFORMAT_6
+            MENUITEM "NTSC-&50",                    IDM_TYPEFORMAT_7
+            MENUITEM "PAL-N&C",                     IDM_TYPEFORMAT_8
+        END
+        MENUITEM SEPARATOR
+        MENUITEM "&Setup Hardware ...",         IDM_SETUPCARD
+        MENUITEM SEPARATOR
+        POPUP "Advanced"
+        BEGIN
+            MENUITEM "Reset Capture Card",          IDM_RESET
+            MENUITEM "Save Settings By Format",     IDM_SAVE_BY_FORMAT
+            MENUITEM "Save Settings By Input",      IDM_SAVE_BY_INPUT
+        END
+        MENUITEM "&Progressive Input\t Ctrl+Alt+P", IDM_PROGRESSIVE
+        MENUITEM "FLI &Film Detect\tCtrl+Alt+F", IDM_FLI_FILMDETECT
     END
 END
 
