audio standard setup dialog for saa7134

--- a/DScaler/DScalerRes/DScalerRes.rc
+++ b/DScaler/DScalerRes/DScalerRes.rc
@@ -942,6 +942,68 @@ BEGIN
                     197,129,56,14
 END
 
+IDD_AUDIOSTANDARD_CUSTOM DIALOG DISCARDABLE  0, 0, 372, 197
+STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "Audio Standard Setup"
+FONT 8, "MS Sans Serif"
+BEGIN
+    DEFPUSHBUTTON   "OK",IDOK,252,176,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,316,176,50,14
+    LISTBOX         IDC_AUDIOSTANDARD_LIST,4,16,112,148,LBS_NOINTEGRALHEIGHT | 
+                    WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_AUDIOSTANDARD_MAJORCARRIER,136,25,68,30,
+                    CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    CONTROL         "AM",IDC_AUDIOSTANDARD_MAJOR_AM,"Button",
+                    BS_AUTORADIOBUTTON | WS_TABSTOP,236,36,27,10
+    CONTROL         "FM",IDC_AUDIOSTANDARD_MAJOR_FM,"Button",
+                    BS_AUTORADIOBUTTON | WS_TABSTOP,236,49,26,10
+    COMBOBOX        IDC_AUDIOSTANDARD_MAJOR_DEMPH,136,52,80,30,
+                    CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_AUDIOSTANDARD_MINORCARRIER,136,94,68,30,
+                    CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    CONTROL         "AM",IDC_AUDIOSTANDARD_MINOR_AM,"Button",
+                    BS_AUTORADIOBUTTON | WS_GROUP | WS_TABSTOP,236,103,27,10
+    CONTROL         "FM",IDC_AUDIOSTANDARD_MINOR_FM,"Button",
+                    BS_AUTORADIOBUTTON | WS_TABSTOP,236,115,26,10
+    CONTROL         "NICAM",IDC_AUDIOSTANDARD_MINOR_NICAM,"Button",
+                    BS_AUTORADIOBUTTON | WS_TABSTOP,236,127,36,10
+    COMBOBOX        IDC_AUDIOSTANDARD_MINOR_DEMPH,136,121,80,30,
+                    CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    CONTROL         "Korean Dual FM Standard",IDC_AUDIOSTANDARD_KOREAN,
+                    "Button",BS_AUTOCHECKBOX | BS_RIGHT | WS_TABSTOP,184,152,
+                    96,10
+    CONTROL         "Major For Both",IDC_LINKED,"Button",BS_AUTOCHECKBOX | 
+                    WS_TABSTOP,300,25,62,10
+    CONTROL         "Slider1",IDC_AUDIOSTANDARD_MAJOR_ADJUST,
+                    "msctls_trackbar32",TBS_VERT | TBS_BOTH | TBS_NOTICKS | 
+                    WS_TABSTOP,304,49,16,119
+    CONTROL         "Slider1",IDC_AUDIOSTANDARD_MINOR_ADJUST,
+                    "msctls_trackbar32",TBS_VERT | TBS_BOTH | TBS_NOTICKS | 
+                    WS_TABSTOP,340,49,16,119
+    LTEXT           "MHz",IDC_STATIC,208,28,16,8
+    GROUPBOX        "FM De-emphasis",IDC_STATIC,132,41,88,31
+    LTEXT           "MHz",IDC_STATIC,208,97,16,8
+    GROUPBOX        "FM De-emphasis",IDC_STATIC,132,110,88,31
+    LTEXT           "Audio Standards:",IDC_STATIC,4,4,55,8
+    CONTROL         "",IDC_STATIC,"Static",SS_ETCHEDVERT,328,41,1,124
+    CTEXT           "Major",IDC_STATIC,296,41,28,8
+    CTEXT           "Minor",IDC_STATIC,332,41,28,8
+    CONTROL         "",IDC_STATIC,"Static",SS_ETCHEDVERT,292,8,1,160
+    GROUPBOX        "Major Carrier",IDC_STATIC,128,12,156,64
+    CONTROL         "",IDC_STATIC,"Static",SS_ETCHEDVERT,228,20,1,51
+    GROUPBOX        "Major Carrier",IDC_STATIC,128,81,156,64
+    CONTROL         "",IDC_STATIC,"Static",SS_ETCHEDVERT,228,89,1,52
+    CTEXT           "Mode",IDC_STATIC,236,92,40,8
+    CTEXT           "Mode",IDC_STATIC,236,25,40,8
+    LTEXT           "Manual Adjust:",IDC_STATIC,300,12,48,8
+    LTEXT           "",IDC_AUDIOSTANDARD_STATUS,57,178,84,8
+    CONTROL         "",IDC_STATIC,"Static",SS_ETCHEDHORZ,4,169,364,1
+    CONTROL         "Carrier 2 Status:",IDC_STATIC,"Static",
+                    SS_LEFTNOWORDWRAP | WS_DISABLED | WS_GROUP,4,178,51,8
+    PUSHBUTTON      "Update Now",IDC_AUDIOSTANDARD_MANUAL_DETECTNOW,148,176,
+                    50,14,NOT WS_VISIBLE
+END
+
 IDD_TOOLBAR_CHANNELS DIALOG DISCARDABLE  0, 0, 111, 16
 STYLE WS_CHILD | WS_CLIPSIBLINGS | WS_CLIPCHILDREN
 FONT 8, "MS Sans Serif"
@@ -1512,7 +1574,6 @@ BEGIN
         END
         POPUP "Audio Sta&ndard"
         BEGIN
-            MENUITEM SEPARATOR
             MENUITEM "Passthrough Sample Rate",     IDC_STATIC, GRAYED
             MENUITEM "Sample Rate: 32000 Hz",       IDM_AUDIOSTANDARD_32000
             , GRAYED
